--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,15 @@
+{% load static %}
 <html>
     <head>
-        <title>Django blog</title>
+        <title>Forms of Entertainment</title>
+        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:ǓǏǏ"
+rel="stylesheet">
+        <link href="{% static 'css/base.css' %}" rel="stylesheet">
+
     </head>
     <body>
         <header>
-            <h1><a href="{% url 'home' %}">Django blog</a></h1>
+            <h1><a href="{% url 'home' %}">Genres for Entertainment</a></h1>
         </header>
         <div>
             {% block content %}
