--- a/templates/base.html
+++ b/templates/base.html
@@ -1,20 +1,23 @@
 {% load static %}
 <html>
     <head>
-        <title>Forms of Entertainment</title>
+        <title>Django blog</title>
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:ǓǏǏ"
-rel="stylesheet">
+        rel="stylesheet">
         <link href="{% static 'css/base.css' %}" rel="stylesheet">
-
     </head>
     <body>
-        <header>
-            <h1><a href="{% url 'home' %}">Genres for Entertainment</a></h1>
-        </header>
         <div>
-            {% block content %}
-
-            {% endblock content %}
+            <header>
+                <div class="nav-left">
+                    <h1><a href="{% url 'home' %}">Django blog</a></h1>
+                </div>
+                <div class="nav-right">
+                    <a href="{% url 'post_new' %}">+ New Blog Post</a>
+                </div>
+            </header>
+        {% block content %}
+        {% endblock content %}
         </div>
     </body>
 </html>
