--- a/static/base.css
+++ b/static/base.css
@@ -1,9 +1,8 @@
 body{
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 18px;
-    background-color: burlywood;
 }
-
+#bd { background-color: burlywood;}
 header {
 border-bottom: 1px solid #999;
 margin-bottom: 2rem;
