--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,12 @@
 {% load static %}
 <html>
-    <head>
+    <head style="background-color: aqua">
         <title>Django blog</title>
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:ǓǏǏ"
         rel="stylesheet">
         <link href="{% static 'css/base.css' %}" rel="stylesheet">
     </head>
-    <body>
+    <body style="background-color: burlywood">
         <div>
             <header>
                 <div class="nav-left">
