--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html>
     <head style="background-color: aqua">
         <title>Django blog</title>
-        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:ǓǏǏ"
+        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400"
         rel="stylesheet">
         <link href="{% static 'css/base.css' %}" rel="stylesheet">
     </head>
@@ -11,9 +11,6 @@
             <header>
                 <div class="nav-left">
                     <h1><a href="{% url 'home' %}">Django blog</a></h1>
-                </div>
-                <div class="nav-right">
-                    <a href="{% url 'post_new' %}">+ New Blog Post</a>
                 </div>
             </header>
         {% block content %}
