Trying something new

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,11 +6,11 @@
         rel="stylesheet">
         <link href="{% static 'css/base.css' %}" rel="stylesheet">
     </head>
-    <body style="background-color: burlywood">
+    <body style="background-color: antiquewhite">
         <div>
-            <header>
+            <header style="background-color: aqua">
                 <div class="nav-left">
-                    <h1><a href="{% url 'home' %}">Django blog</a></h1>
+                    <h1><a href="{% url 'home' %}">Entertainment</a></h1>
                 </div>
             </header>
         {% block content %}
