--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     </head>
     <body style="background-color: antiquewhite">
         <div>
-            <header style="background-color: aqua">
+            <header style="background-color: gray">
                 <div class="nav-left">
                     <h1><a href="{% url 'home' %}">Entertainment</a></h1>
                 </div>
